[workspace]
members = ["common", "l1-program", "sequencer", "client"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
bincode = "1"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
